Making Clean and Dynamic s_id